Adaptación del swagger para la Entrega 1 y retoques varios
